refactor: use czv in czv-python
- Add `file_path` for czv-python count operations
- Refactor tests based on file path instead of data
- Use thiserror in czv
- Update examples to reflect changes

--- a/czv/Cargo.toml
+++ b/czv/Cargo.toml
@@ -6,12 +6,13 @@ description = "Rust library for performing CSV-related operations for data engin
 repository = "https://github.com/rzmk/czv"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-keywords = ["csv", "library"]
+keywords = ["csv", "library", "data"]
 categories = ["text-processing"]
 
 [dependencies]
 anyhow = "1.0.86"
 csv = "1.3.0"
+thiserror = "1.0.61"
 typed-builder = "0.18.2"
 
 [dev-dependencies]
