--- a/czv-python/Cargo.toml
+++ b/czv-python/Cargo.toml
@@ -12,5 +12,6 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 anyhow = "1.0.86"
 csv = "1.3.0"
+czv = { path = "../czv" }
 pyo3 = { version = "0.21.2", features = ["extension-module"] }
 thiserror = "1.0.61"
