--- a/czv-wasm/Cargo.toml
+++ b/czv-wasm/Cargo.toml
@@ -12,6 +12,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 anyhow = "1.0.86"
 csv = "1.3.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde-wasm-bindgen = "0.6.5"
 thiserror = "1.0.61"
+tsify-next = "0.5.3"
 wasm-bindgen = { version = "0.2" }
 wasm-bindgen-test = { version = "0.3.42" }
